<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (C) 2025 The LineageOS Project

 SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="bypass_charging_header"
        android:layout="@layout/bypass_charging_header"
        android:selectable="false" />

    <PreferenceCategory
        android:title="@string/bypass_charging_title">

        <SwitchPreferenceCompat
            android:key="bypass_charging"
            android:title="@string/bypass_charging_title"
            android:summary="@string/bypass_charging_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="bypass_charging_threshold"
            android:title="@string/bypass_charging_threshold_title"
            android:summary="@string/bypass_charging_threshold_summary"
            android:entries="@array/bypass_charging_threshold_entries"
            android:entryValues="@array/bypass_charging_threshold_values"
            android:defaultValue="30" />

    </PreferenceCategory>

</PreferenceScreen>
